<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/main_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/howDoFoFeelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_feel_text"
        android:textSize="30sp"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.199"/>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="336dp"
        android:layout_height="64dp"
        android:progress="50"
        app:layout_constraintBottom_toTopOf="@+id/NextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/howDoFoFeelText"
        app:layout_constraintVertical_bias="0.46"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/FeelingValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FeelingValueNeutral"
        android:textSize="20sp"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toTopOf="@+id/seekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/howDoFoFeelText" />

    <TextView
        android:id="@+id/SeekBarProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/InitialPositivityValue"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toTopOf="@+id/seekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FeelingValue"
        app:layout_constraintVertical_bias="0.941" />

    <Button
        android:id="@+id/NextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:text="@string/NextButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />
</androidx.constraintlayout.widget.ConstraintLayout>